# IntelCaffeOnSpark_mirror

./: .gitignore  .gitmodules  Makefile  run_alexnet_standalone_8.sh  run_googlenet_standalone_8.sh  time.sh
caffe-distri/: .gitignore  CMakeLists.txt  Makefile  pom.xml
caffe-distri/include/: CaffeNet.hpp
caffe-distri/include/util/: InputAdapter.hpp  socket.hpp  socket_sync_cpu.hpp
caffe-distri/include/util/threadpool/: task_adaptors.hpp
caffe-distri/src/main/cpp/: CaffeNet.cpp  common.cpp
caffe-distri/src/main/cpp/jni/: JniCaffeNet.cpp
caffe-distri/src/main/cpp/tools/: caffe_mini_cluster.cpp
caffe-distri/src/main/cpp/util/: blocking_queue_extra.cpp  socket.cpp  socket_sync.cpp  socket_sync_cpu.cpp
caffe-distri/src/main/java/com/yahoo/ml/jcaffe/: BaseObject.java  CaffeNet.java  FloatArray.java  MatVector.java  Utils.java
caffe-distri/src/test/java/com/yahoo/ml/jcaffe/: CaffeNetTest.java
caffe-distri/src/test/resources/: log4j.properties
caffe-grid/: pom.xml
caffe-grid/src/main/scala/com/intel/ml/caffe/: CaffeOnSparkWithPS.scala
caffe-grid/src/main/scala/com/yahoo/ml/caffe/: CaffeOnSpark.scala  CaffeProcessor.scala  Config.scala  DataSource.scala  ImageDataFrame.scala  ImageDataSource.scala  LmdbRDD.scala
caffe-grid/src/test/resources/ps-integration-test/: caffenet_solver.prototxt  caffenet_train_net.prototxt  lenet_memory_solver.prototxt  lenet_memory_train_test.prototxt  lenet_solver.prototxt  lenet_train_test.prototxt
caffe-grid/src/test/scala/com.intel.ml.caffe/: CaffeOnSparkTest.scala  ParameterServerTest.scala
caffe-grid/src/test/scala/com/yahoo/ml/caffe/: CaffeOnSparkTest.scala  SourceTest.scala
caffe-public/examples/mnist/: lenet_solver.prototxt  lenet_solver_top5.prototxt  lenet_train_test.prototxt  lenet_train_test_top5.prototxt
caffe-public/src/caffe/: solver.cpp
caffe-public/src/caffe/proto/: caffe.proto
data/: lenet_memory_solver.prototxt  lenet_memory_train_test.prototxt
models/bvlc_alexnet/: alexnet_owt_caffe.prototxt  solver.prototxt  solver_client.prototxt  train_val.prototxt
models/bvlc_googlenet/: quick_solver.prototxt  quick_solver_large.prototxt  quick_solver_large_16.prototxt  solver.prototxt  solver_large.prototxt  test_result.tmp  train_val.prototxt  train_val_large.prototxt  train_val_large_16.prototxt
